
  - Let MATLAB find mlUnit as proper toolbox. Users can query mlUnit version
    information by calling `>> ver('mlunit')` after having loaded mlUnit.
    However, it is necessary that the Contents.m is living inside a folder
    literally called "mlunit".
  - Additional failontestfail option in build.xml lets user choose whether the
    target should fail when tests failed or not.

  - Fix: matlabcommand.xml's logfile option is not actually optional
  - Fix: assert_equals judges Inf and Inf as not equal
  - Fix: stack expansion for syntax errors forgets to remove .m file extension
  - Fix: assert_equals outputs 'zeros(1,0)' for empty numerical arrays of
    size [1, 0].
  - Fix: printable fails for empty char array of size [0, 1] or [1, 0].
  - Fix: assert_equals judges empty arrays not equal, if their (empty) sizes
    differ


mlUnit 1.6.9 (2015-06-17)
-------------------------
  
  - Remove deprecate Ant code handling for matlab.bat or delegate matlab.exe
  - Add matlab.root Ant property for easier MATLAB referencing
  - Reliably fetch MATLAB executable from the system path if neither matlab.root
    nor matlab.exec given.
  - Allow single test suite execution on console for function test suites.
    Works by calling the test suite directly on the console. Not genericly
    possible for class-based test suites, as each class' constructor handles
    inheritance itself.
  - Allow single test suite execution on console with recursive_test_run.
  - Allow relative path names with recursive_test_run. [B#23]
  - Test reports get only generated if target directory argument is provided.
  - Remove quasi-reflective test name check, as we only instantiate test objects
    with automatically retrieved test cases. Also, it messed up when we tried to
    use it on methods inherited from test_case, e.g. suite_set_up, which often
    would only be known after the child constructor, not after the parent
    constructor.
  - Remove mlunit_reflect.