@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="31" tests="32" time="0.546" hostname="unknown" timestamp="2015-06-23T09:58:37">
+<testsuite name="test_failure_output" errors="1" failures="32" tests="33" time="0.562" hostname="unknown" timestamp="2015-06-23T11:13:31">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[Expected empty expression was actually: 3.
@@ -62,48 +62,57 @@ In test_failure_output.m at line 64]]></failure>
   <testcase classname="test_failure_output" name="test_equals_multiline_string">
     <failure><![CDATA[Data not equal:
   Expected : ['foo';'bar']
-  Actual   : ['fool';'barz']
-  Changes  :        ^^
+  Actual   : ['fuh';'bah']
+  Changes  :    ^^     ^
 In test_failure_output.m at line 70]]></failure>
+  </testcase>
+  <testcase classname="test_failure_output" name="test_equals_multiline_string_asymmetric">
+    <failure><![CDATA[Data not equal:
+  Expected : ['foo';'bar']
+  Actual   : ['fool';'barz']
+  Changes  :      ^^^^^^^^^^
+In test_failure_output.m at line 76]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_multiline_string_vs_singleline">
     <failure><![CDATA[Data not equal:
   Expected : ['foo';'bar']
   Actual   : 'fool;bar'
-  Changes  :   ^ ^^^^^
-In test_failure_output.m at line 76]]></failure>
+  Changes  : ^^^ ^^^^^^^^^
+In test_failure_output.m at line 82]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_cell">
     <failure><![CDATA[Data not equal:
   Expected : {3, 'foo'}
   Actual   : {3, 'fOo'}
-In test_failure_output.m at line 83]]></failure>
+In test_failure_output.m at line 89]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_struct">
     <failure><![CDATA[Data not equal at position .foo:
   Expected : {'hi', 'ho'}
   Actual   : {'ho', 'hi'}
-In test_failure_output.m at line 91]]></failure>
+  Changes  :    ^     ^
+In test_failure_output.m at line 97]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_string_struct">
     <failure><![CDATA[Data not equal at position .foo:
   Expected : 'you say \to-'mah-(,)to'
   Actual   : 'you say \to-'mey-(,)to'
   Changes  :                ^^
-In test_failure_output.m at line 101]]></failure>
+In test_failure_output.m at line 107]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_scalar_cellstring_struct">
     <failure><![CDATA[Data not equal at position .foo:
   Expected : {'you say \to-'mah-(,)to'}
   Actual   : {'you say \to-'mey-(,)to'}
   Changes  :                 ^^
-In test_failure_output.m at line 111]]></failure>
+In test_failure_output.m at line 117]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct">
     <failure><![CDATA[Data not equal at position .tee.foo:
   Expected : {'hi', 'ho'}
   Actual   : {'ho', 'hi'}
-In test_failure_output.m at line 120]]></failure>
+  Changes  :    ^     ^
+In test_failure_output.m at line 126]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct_multiple_differences">
     <failure><![CDATA[Data not equal at position .tee.bar:
@@ -112,7 +121,8 @@ In test_failure_output.m at line 120]]></failure>
 Data not equal at position .tee.foo:
   Expected : {'hi', 'ho'}
   Actual   : {'ho', 'hi'}
-In test_failure_output.m at line 130]]></failure>
+  Changes  :    ^     ^
+In test_failure_output.m at line 136]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct_many_differences">
     <failure><![CDATA[Data not equal at position .bar:
@@ -125,13 +135,13 @@ Data not equal at position .tee.bar:
   Expected : [3 4]
   Actual   : [3 5]
 ... more differences detected, but not displayed.
-In test_failure_output.m at line 142]]></failure>
+In test_failure_output.m at line 148]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_structarray">
     <failure><![CDATA[Data not equal:
   Expected : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'hi', 'ho'}; bar:4}]
   Actual   : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'ho', 'hi'}; bar:4}]
-In test_failure_output.m at line 150]]></failure>
+In test_failure_output.m at line 156]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_object">
     <failure><![CDATA[Data not equal:
@@ -161,50 +171,50 @@ Data characteristics
       Interpolation method  linear
       Size                  [1   1  12]
       Data type             double
-In test_failure_output.m at line 160]]></failure>
+In test_failure_output.m at line 166]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_handle">
     <failure><![CDATA[Data not equal:
   Expected : 0
   Actual   : 1
-In test_failure_output.m at line 175]]></failure>
+In test_failure_output.m at line 181]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_functionhandle">
     <failure><![CDATA[Data not equal:
   Expected : @(x)x*x+x
   Actual   : @(x)x+x*x
-In test_failure_output.m at line 191]]></failure>
+In test_failure_output.m at line 197]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_javaobject">
     <failure><![CDATA[Data not equal:
   Expected : hiho
   Actual   : hiHo
-In test_failure_output.m at line 197]]></failure>
+In test_failure_output.m at line 203]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_not_equals">
     <failure><![CDATA[Expected and actual are equal.
-In test_failure_output.m at line 202]]></failure>
+In test_failure_output.m at line 208]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_error">
     <failure><![CDATA[Should be error, but 3 alone isn't.
 Error expected, but none occurred.
-In test_failure_output.m at line 207]]></failure>
+In test_failure_output.m at line 213]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_typed_error">
     <failure><![CDATA[Error expected, but none occurred.
-In test_failure_output.m at line 212]]></failure>
+In test_failure_output.m at line 218]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_wrong_typed_error">
     <failure><![CDATA[Error occurred, but did not match criteria. Expected error identifier 'MATLAB:SomeError' actually was 'MATLAB:m_improper_grouping'.
-In test_failure_output.m at line 216]]></failure>
+In test_failure_output.m at line 222]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_warning">
     <failure><![CDATA[No warning MATLAB:rmpath:DirNotFound when executing function @()3.
-In test_failure_output.m at line 222]]></failure>
+In test_failure_output.m at line 228]]></failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_implementation_fault">
     <error><![CDATA[Undefined function or variable 'unknown_function_call'.
-In test_failure_output.m at line 226
+In test_failure_output.m at line 232
 In run_test.m at line 21
 In run_test.m at line 50
 In run_suite.m at line 86
@@ -214,8 +224,8 @@ In recursive_test_run.m at line 27]]></error>
   </testcase>
   <testcase classname="test_failure_output" name="test_nested_functions">
     <failure><![CDATA[Nested function test.
-In test_failure_output.m at line 234
-In test_failure_output.m at line 230]]></failure>
+In test_failure_output.m at line 240
+In test_failure_output.m at line 236]]></failure>
   </testcase>
   <system-out/>
   <system-err/>
